# shmartaf-backend

./: .flake8  .gitignore copy  .pre-commit-config.yaml  Procfile  README copy.md  README.md  X.csv  babysitter_data.csv  contacted.csv  df.csv  df_final.csv  fastApi_key.pem  input_df.csv  naive_bayes_model.joblib  parentid.csv  pyproject.toml  requirements.txt  skills_needs.csv  skills_needs1.csv  skills_needs2.csv  skills_needs3.csv  y.csv
.github/workflows/: run-pre-commit.yml
backend/: POC.py  POC_FuncDummy.py  POC_oldSyntax.py  WorkingPOC_newSyntax.py  app.py  logger.py  mltest.py  newPOCtry.py  process_data_before_learning.py  send_parent_id.py  tesy_example_for_us.py
backend/database/: dal.py  database.py  faker_db.py  models.py  schemas.py
backend/router/: algo.py  babysitter.py  certifications.py  parent.py  requirements.py  users.py
