[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Or Basker <or.basker@ridewithvia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
setuptools = "^69.1.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
pydantic = {extras = ["email"], version = "^2.6.2"}
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
faker = "^23.2.1"
certifi = "^2024.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
